--- a/views/view1.html
+++ b/views/view1.html
@@ -6,8 +6,7 @@
      <title>Document</title>
 </head>
 <body>
-     <h1>Hello World!</h1>
-     <a href="https://uber-data-visualization-299706.ue.r.appspot.com">Uber Data Visualization</a>
-     <a href="/views/view1.html">View 1</a>
+     Hello
+     <a href="../index.html">Link Back</a>
 </body>
 </html>
