--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
     width: 50%;
     padding-right: 100px;
     h3 {
-      font-size: 40px;
+      font-size: 50px;
       padding-bottom: 20px;
       font-weight: 200;
       letter-spacing: 5px;
@@ -65,10 +65,8 @@ body {
     display: flex;
     max-width: 100%;
     justify-content: space-between;
-    //     align-items: center;
     border-radius: 25px;
     background-color: #1a3137;
-    color: white;
     padding: 25px;
     margin: 40px 0;
 
@@ -88,6 +86,10 @@ body {
         font-size: 16px;
         padding-right: 20px;
       }
+
+      // a:first-of-type {
+      //   color: #c27b90;
+      // }
 
       a:active {
         color: white;
