--- a/style.scss
+++ b/style.scss
@@ -22,15 +22,45 @@ body {
   .about {
     width: 50%;
     padding-right: 100px;
-    h3 {
+    h1 {
       font-size: 50px;
       padding-bottom: 20px;
       font-weight: 200;
       letter-spacing: 5px;
     }
+
+    button {
+      background-color: white;
+      color: #264952;
+      text-decoration: none;
+      border: none;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      margin-right: 15px;
+      padding: 10px 10px;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:active {
+      background-color: #1a3137;
+      text-decoration: none;
+      border: none;
+      outline: none;
+    }
+
+    button:focus {
+      text-decoration: none;
+      border: none;
+      outline: none;
+    }
+
     h5 {
       font-size: 16px;
       line-height: 1.25rem;
+      margin-bottom: 20px;
     }
   }
 
@@ -55,7 +85,7 @@ body {
 .projects {
   padding: 70px 100px;
 
-  h4 {
+  h2 {
     font-weight: 200;
     font-size: 36px;
     margin-bottom: 50px;
@@ -69,12 +99,13 @@ body {
     background-color: #1a3137;
     padding: 25px;
     margin: 40px 0;
+    // transform: translateY(-100%);
 
     .project-left {
       width: 50%;
       padding: 0.5rem;
 
-      h5 {
+      h3 {
         font-size: 28px;
         font-weight: 200;
         padding-bottom: 0.75rem;
@@ -98,12 +129,13 @@ body {
       p {
         font-size: 14px;
         padding-top: 1rem;
-        line-height: 1.1rem;
+        line-height: 1.25rem;
       }
     }
 
     .project-right {
       width: 45%;
+      transition: transform 0.2s;
 
       img {
         width: 100%;
