--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,8 @@ body {
   background-color: #264952;
   font-family: 'Poppins', sans-serif;
   color: white;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .hero {
@@ -15,7 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   max-width: 100%;
-  padding: 150px 30px;
+  margin: 200px 30px;
 
   position: relative;
 
@@ -83,7 +85,7 @@ body {
 }
 
 .projects {
-  padding: 70px 100px;
+  margin: 70px 100px;
 
   h2 {
     font-weight: 200;
@@ -93,13 +95,13 @@ body {
 
   .project {
     display: flex;
+    flex-direction: row;
     max-width: 100%;
     justify-content: space-between;
     border-radius: 25px;
     background-color: #1a3137;
     padding: 25px;
     margin: 40px 0;
-    // transform: translateY(-100%);
 
     .project-left {
       width: 50%;
@@ -111,25 +113,66 @@ body {
         padding-bottom: 0.75rem;
       }
 
-      a {
+      a.link {
+        display: inline-block;
         text-decoration: none;
         color: #6dabbb;
         font-size: 16px;
-        padding-right: 20px;
+        margin: 0 20px 1rem 0;
       }
 
-      // a:first-of-type {
-      //   color: #c27b90;
-      // }
-
-      a:active {
+      a.link:active {
         color: white;
       }
 
       p {
         font-size: 14px;
-        padding-top: 1rem;
+        margin-bottom: 0.5rem;
         line-height: 1.25rem;
+      }
+
+      ul li {
+        font-size: 14px;
+        margin-bottom: 0.5rem;
+        line-height: 1.25rem;
+      }
+
+      a.hyperlink {
+        display: inline-block;
+        text-decoration: none;
+        color: #6dabbb;
+      }
+
+      .technologies {
+        margin-top: 1rem;
+      }
+
+      button {
+        background-color: white;
+        color: #264952;
+        text-decoration: none;
+        border: none;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        margin-right: 5px;
+        padding: 2px 5px;
+        font-family: 'Poppins', sans-serif;
+        // font-weight: 500;
+        font-size: 14px;
+        // cursor: pointer;
+      }
+
+      button:active {
+        background-color: white;
+        text-decoration: none;
+        border: none;
+        outline: none;
+      }
+
+      button:focus {
+        text-decoration: none;
+        border: none;
+        outline: none;
       }
     }
 
