Fixed Uber Link and Modified Hero Section

--- a/style.css
+++ b/style.css
@@ -24,9 +24,15 @@ body {
   width: 50%;
   padding-right: 100px;
 }
+.hero .about h4 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #1a3137;
+  margin-bottom: 1rem;
+}
 .hero .about h1 {
   font-size: 50px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
   font-weight: 200;
   letter-spacing: 5px;
 }
@@ -142,6 +148,7 @@ body {
   margin-right: 5px;
   padding: 2px 5px;
   font-family: "Poppins", sans-serif;
+  font-weight: 500;
   font-size: 14px;
 }
 .projects .project .project-left button:active {
