--- a/style.css
+++ b/style.css
@@ -163,6 +163,8 @@ body {
   outline: none;
 }
 .projects .project .project-right {
+  display: flex;
+  align-items: center;
   width: 45%;
 }
 .projects .project .project-right img {
