Added Computer Graphics Project

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ body {
   font-size: 28px;
   font-weight: 200;
   padding-bottom: 0.75rem;
+  line-height: 2rem;
 }
 .projects .project .project-left a.link {
   display: inline-block;
