--- a/style.scss
+++ b/style.scss
@@ -119,6 +119,7 @@ body {
         font-size: 28px;
         font-weight: 200;
         padding-bottom: 0.75rem;
+        line-height: 2rem;
       }
 
       a.link {
